# opus-ripper-gui

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  run.sh
.github/workflows/: build.yml
qml/: main.qml
qml/components/: DirectoryPicker.qml  ProgressView.qml  SettingsPanel.qml  StyledGroupBox.qml  qmldir
qml/theme/: Style.qml  qmldir
screenshots/: .gitkeep
src/: main.cpp
src/controllers/: ConversionController.cpp  ConversionController.h
src/core/: AudioConverter.cpp  AudioConverter.h  FileScanner.cpp  FileScanner.h  MetadataHandler.cpp  MetadataHandler.h  OpusEncoder.cpp  OpusEncoder.h
src/models/: ConversionModel.cpp  ConversionModel.h  ProgressModel.cpp  ProgressModel.h
